--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,13 +16,8 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
- 
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+@layer components {
+  .btn {
+    @apply bg-[#f8f9fa] rounded-md text-sm text-gray-800 hover:ring-1 hover:ring-gray-200 focus:outline-none active:ring-gray-300 hover:shadow-md w-36 h-10 transition-shadow;
   }
 }
